--- a/ITE1-Final_Project/Django/ITE1FinalDjango/django_main/templates/django_main/index.html
+++ b/ITE1-Final_Project/Django/ITE1FinalDjango/django_main/templates/django_main/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Appoint | {{title}}</title>
+    <title>Appointment | {{title}}</title>
 </head>
 <body>
     
