--- a/ITE1-Final_Project/Django/ITE1FinalDjango/django_main/templates/django_main/login_register.html
+++ b/ITE1-Final_Project/Django/ITE1FinalDjango/django_main/templates/django_main/login_register.html
@@ -17,11 +17,14 @@
             <div class="error">{{ login_error }}</div>
         {% endif %}
 
-        {{ form.username.label_tag }}
-        {{ login_form.username }}
-
-        {{ login_form.password.label_tag }}
-        {{ login_form.password }}
+        <div class="input-group">
+            <label for="reg-username">Username</label>
+            <input type="text" id="reg-username" name="username" required />
+        </div>
+        <div class="input-group">
+            <label for="reg-email">Password</label>
+            <input type="email" id="reg-email" name="email" required />
+        </div>
 
         <button class="btn">Login</button>
 
@@ -38,24 +41,24 @@
         {% if register_error %}
             <div class="error">{{ register_error }}</div>
         {% endif %}
-
-        {{ register_form.username.label_tag }}
-        {{ register_form.username }}
-
-        {{ register_form.email.label_tag }}
-        {{ register_form.email }}
-
-        {{ register_form.password1.label_tag }}
-        {{ register_form.password1 }}
-
-        {{ register_form.password2.label_tag }}
-        {{ register_form.password2 }}
-
-        <button class="btn">Register</button>
-
-        <p class="toggle-text">Already have an account?
-            <a onclick="toggleForm()">Login</a>
-        </p>
+        <div class="input-group">
+            <label for="reg-username">Username</label>
+            <input type="text" id="reg-username" name="username" required />
+        </div>
+        <div class="input-group">
+            <label for="reg-email">Email</label>
+            <input type="email" id="reg-email" name="email" required />
+        </div>
+        <div class="input-group">
+            <label for="reg-password">Password</label>
+            <input type="password" id="reg-password" name="password" required />
+        </div>
+        <div class="input-group">
+            <label for="reg-password">Confirm Password</label>
+            <input type="password" id="reg-password" name="password" required />
+        </div>
+        <button type="submit" class="btn">Register</button>
+        <p class="toggle-text">Already have an account? <a onclick="toggleForm()">Login</a></p>
     </form>
 
 </div>
